--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "firebase": "^10.14.1",
+    "json2csv": "^6.0.0-alpha.2",
     "lucide-react": "^0.453.0",
+    "papaparse": "^5.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
